<resources>
    <string name="app_name">MovementTracker</string>

    <string name="hello_world">Test Activity!</string>
    <string name="action_settings">Settings</string>
    <string name="titleName">MovementTracker v1.0</string>
    <string name="beginButton">Begin</string>
    <string name="endButton">End</string>
    <string name="resetButton">Reset</string>
    <string name="reviewButton">Review</string>
    <string name="title_activity_main_activity2">TestIntentService Activity</string>
    <string name="sensorActivity_name">sensorActivity</string>
    <string name="action_search">search_action</string>
    <string name="action_overflow">overflow_action</string>
    <string name="action_share">share_action</string>
    <string name="start_button">Start Sensing</string>
    <string name="end_button">End Sensing</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="Sensor_value">Sensor Values</string>
    <string name="x_value">X axis:</string>
    <string name="y_value">Y axis:</string>
    <string name="z_value">Z axis:</string>
    <string name="title_activity_result">Display Result</string>
    <string name="activity_result">output result here</string>
</resources>
