<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="qi.muxi.movementtracker.SensorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width= "wrap_content"
            android:layout_height= "wrap_content"
            android:layout_marginTop= "50dp"
            android:layout_marginBottom= "50dp"
            android:layout_gravity= "center_horizontal"
            android:textSize= "30sp"
            android:textColor= "@color/darkred"
            android:text= "@string/Sensor_value"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity= "center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width= "wrap_content"
                android:layout_height= "wrap_content"
                android:layout_gravity= "center_horizontal"
                android:padding="20dp"
                android:textSize= "20sp"
                android:text= "@string/x_value"
                />

            <TextView
                android:layout_width= "wrap_content"
                android:layout_height= "wrap_content"
                android:layout_gravity= "center_horizontal"
                android:padding="20dp"
                android:textSize= "20sp"
                android:id= "@+id/x_value"
                />

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity= "center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width= "wrap_content"
                android:layout_height= "wrap_content"
                android:layout_gravity= "center_horizontal"
                android:padding="20dp"
                android:textSize= "20sp"
                android:text= "@string/y_value"
                />

            <TextView
                android:layout_width= "wrap_content"
                android:layout_height= "wrap_content"
                android:layout_gravity= "center_horizontal"
                android:padding="20dp"
                android:textSize= "20sp"
                android:id= "@+id/y_value"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity= "center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width= "wrap_content"
                android:layout_height= "wrap_content"
                android:layout_gravity= "center_horizontal"
                android:padding="20dp"
                android:textSize= "20sp"
                android:text= "@string/z_value"
                />

            <TextView
                android:layout_width= "wrap_content"
                android:layout_height= "wrap_content"
                android:layout_gravity= "center_horizontal"
                android:padding="20dp"
                android:textSize= "20sp"
                android:id= "@+id/z_value"
                />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_button2"
            android:id="@+id/end_button2"
            android:text="@string/end_button"/>


    </LinearLayout>

</RelativeLayout>
